--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-       "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-       "start": "cross-env NODE_ENV=production node dist/index.js",
-       "check": "tsc",
-       "db:push": "drizzle-kit push"
+    "dev": "vite --port 5000 --host",
+    "build": "vite build",
+    "start": "vite preview --port 5000 --host",
+    "check": "tsc"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
